@@ -128,18 +128,20 @@ static VLCOpen *_o_sharedMainInstance = nil;
     [o_btn_cancel setTitle: _NS("Cancel")];
 
     [[o_tabview tabViewItemAtIndex: 0] setLabel: _NS("File")];
+    [o_tabview accessibilitySetOverrideValue:_NS("4 Tabs to choose between media input. Select 'File' for files, 'Disc' for optical media such as DVDs, Audio CDs or BRs, 'Network' for network streams or 'Capture' for Input Devices such as microphones or cameras, the current screen or TV streams if the EyeTV application is installed.") forAttribute:NSAccessibilityDescriptionAttribute];
     [[o_tabview tabViewItemAtIndex: 1] setLabel: _NS("Disc")];
     [[o_tabview tabViewItemAtIndex: 2] setLabel: _NS("Network")];
     [[o_tabview tabViewItemAtIndex: 3] setLabel: _NS("Capture")];
-
     [o_file_name setStringValue: @""];
     [o_file_name_stub setStringValue: _NS("Choose a file")];
     [o_file_icon_well setImage: [NSImage imageNamed:@"generic"]];
     [o_file_btn_browse setTitle: _NS("Browse...")];
+    [[o_file_btn_browse cell] accessibilitySetOverrideValue:_NS("Click to select a file for playback") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_file_stream setTitle: _NS("Treat as a pipe rather than as a file")];
     [o_file_stream setHidden: NO];
     [o_file_slave_ckbox setTitle: _NS("Play another media synchronously")];
     [o_file_slave_select_btn setTitle: _NS("Choose...")];
+    [[o_file_btn_browse cell] accessibilitySetOverrideValue:_NS("Click to select a another file to play it in sync with the previously selected file.") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_file_slave_filename_lbl setStringValue: @""];
     [o_file_slave_icon_well setImage: NULL];
     [o_file_subtitles_filename_lbl setStringValue: @""];
@@ -184,6 +186,7 @@ static VLCOpen *_o_sharedMainInstance = nil;
     [o_net_http_url_lbl setStringValue: _NS("URL")];
     [o_net_help_lbl setStringValue: _NS("To Open a usual network stream (HTTP, RTSP, RTMP, MMS, FTP, etc.), just enter the URL in the field above. If you want to open a RTP or UDP stream, press the button below.")];
     [o_net_help_udp_lbl setStringValue: _NS("If you want to open a multicast stream, enter the respective IP address given by the stream provider. In unicast mode, VLC will use your machine's IP automatically.\n\nTo open a stream using a different protocol, just press Cancel to close this sheet.")];
+    [[o_net_http_url cell] accessibilitySetOverrideValue:_NS("Enter a URL here to open the network stream. To open RTP or UDP streams, click on the respective button below.") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_net_udp_cancel_btn setTitle: _NS("Cancel")];
     [o_net_udp_ok_btn setTitle: _NS("Open")];
     [o_net_openUDP_btn setTitle: _NS("Open RTP/UDP Stream")];
@@ -359,7 +362,9 @@ static VLCOpen *_o_sharedMainInstance = nil;
     [o_file_sub_path_lbl setHidden: NO];
     [o_file_sub_path_fld setStringValue: @""];
     [o_file_sub_btn_settings setTitle: _NS("Choose...")];
+    [[o_file_btn_browse cell] accessibilitySetOverrideValue:_NS("Click to setup subtitle playback in full detail.") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_file_sub_btn_browse setTitle: _NS("Browse...")];
+    [[o_file_sub_btn_browse cell] accessibilitySetOverrideValue:_NS("Click to select a subtitle file.") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_file_sub_override setTitle: _NS("Override parameters")];
     [o_file_sub_delay_lbl setStringValue: _NS("Delay")];
     [o_file_sub_delay_stp setEnabled: NO];
@@ -372,6 +377,7 @@ static VLCOpen *_o_sharedMainInstance = nil;
     [o_file_sub_align_lbl setStringValue: _NS("Subtitles alignment")];
     [o_file_sub_align_pop removeAllItems];
     [o_file_sub_ok_btn setStringValue: _NS("OK")];
+    [[o_file_sub_ok_btn cell] accessibilitySetOverrideValue:_NS("Click to dismiss the subtitle setup dialog.") forAttribute:NSAccessibilityDescriptionAttribute];
     [o_file_sub_font_box setTitle: _NS("Font Properties")];
     [o_file_sub_file_box setTitle: _NS("Subtitle File")];
 
