@@ -75,6 +75,8 @@ Mac OS X Port:
  * VLC requires Mac OS X 10.6 or later now
 
 Mac OS X Interface:
+ * add accessibility support to playback windows, open panel and fullscreen
+   controller
  * add a GUI for the QTSound access module to process audio captured locally
    - This also allows to capture input from a webcam and a mic at the same time.
  * add a GUI to capture QTSound data along with the current screen content
